tests/NormalTests/paczka1/fuzzy1/98624658.err
Error in line 2: jBp8cJ5P A344 85,5
Error in line 7: A344 A344 43,5
Error in line 1: njZ A835 79,6
Error in line 9: A344 A761 19,9
Error in line 12: A344 A344 82,2
Error in line 4: jBp8cJ5P A761 62,6
Error in line 19: rBIHJjoX A835 78,4
Error in line 27: rBIHJjoX A344 3,5
Error in line 20: 8OGsslZtew6 S918 71,7
Error in line 21: A344 S918 85,7
Error in line 30: A344 A344 64,7
Error in line 31: A344 A761 66,1
Error in line 37: NxQuSK A835 3,9
